fix: corrige bug de layout overflow

--- a/src/Chat/Chat.css
+++ b/src/Chat/Chat.css
@@ -40,6 +40,14 @@
 .chat__inputIcons > .MuiSvgIcon-root {
   padding: 5px;
 }
+
 .chat__messages {
   flex: 1;
+  overflow-y: scroll;
+  -ms-overflow-style: none;/* IE and Edge*/
+  scrollbar-width: none; /* Firefox */
+}
+
+.chat__messages::-webkit-scrollbar {
+  display: none;
 }
