--- a/src/Sidebar/Sidebar.css
+++ b/src/Sidebar/Sidebar.css
@@ -18,6 +18,7 @@
 
 .sidebar__channels {
   flex: 1;
+  overflow-y: scroll;
 }
 
 .sidebar__addChannel {
