--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,22 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #2e3338;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #202225;
+  border: 1px solid #2e3338;
+  border-radius: 10px;
+  border-top: none;
+  border-bottom: none;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
